--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,4 @@ License: GPL (>=2)
 Depends:
     data.table, reshape2, fields, tools, utils, zoo, zipcode, sp
 RoxygenNote: 6.0.1
+Suggests: testthat
